# lab-4

./: CMakeLists.txt
src/: CitaMedica.cpp  CitaMedica.h  HistoriaClinica.cpp  HistoriaClinica.h  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  PacienteAmbulatorio.cpp  PacienteAmbulatorio.h  PacienteHospitalizado.cpp  PacienteHospitalizado.h  Persona.cpp  Persona.h  Utilidades.cpp  Utilidades.h  main.cpp
